feat(config): :wrench: force install node packages
add `--force` flag with `npm ci` in setup project step

ref: #16

--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -93,7 +93,7 @@ jobs:
         - name: ⬇️ Setup Project
           run: | 
            echo Installing Node Modules
-           npm ci
+           npm ci --force
   
 ## TODO: 
 ##       ADD ATTRIBUTION TRIGGER
