ci(config): :bug: add fetch depth
add fetch depth to get tags

ref: #18

--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -283,6 +283,7 @@ jobs:
         with:
           ref: ${{ needs.check-pre-requisites.outputs.tag-version }}
           token: ${{ secrets.PAT }}
+          fetch-depth: 0
 
       - name: 🛠 Setup gh and git
         run: |
