--- a/.github/workflows/util-create-app-web-release.yml
+++ b/.github/workflows/util-create-app-web-release.yml
@@ -106,6 +106,7 @@ jobs:
         with:
           ref: ${{ needs.create-release.outputs.tag-version }}
           token: ${{ secrets.PAT }}
+          fetch-depth: 0
 
       - name: 🛠 Set up Node.js
         uses: actions/setup-node@v4
