ci(config): 🐛 add fetch depth
add fetch depth to get tags

ref: #18

--- a/.github/workflows/util-create-service-release.yml
+++ b/.github/workflows/util-create-service-release.yml
@@ -104,6 +104,7 @@ jobs:
         with:
           ref: ${{ needs.check-pre-requisites.outputs.tag-version }}
           token: ${{ secrets.PAT }}
+          fetch-depth: 0
        
       - name: 🛠 Set up Node.js
         uses: actions/setup-node@v4
