--- a/.github/workflows/util-service-deploy.yml
+++ b/.github/workflows/util-service-deploy.yml
@@ -117,7 +117,7 @@ jobs:
           key: ${{ secrets.REMOTE_SSH_KEY }}
           port: 22
           script: |
-            sudo -u ${{ secrets.REMOTE_SSH_USER }} curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/service-deploy.sh | bash -s ${{ secrets.REMOTE_PATH_OF_PROJECT_DEPLOYMENT_PATH }} ${{ github.repository_owner }} ${{ github.event.repository.name }}
+            sudo -u ${{ secrets.REMOTE_SSH_USER }} curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/service-deploy.sh | bash -s ${{ secrets.REMOTE_PATH_OF_PROJECT_DEPLOYMENT_PATH }} ${{ github.repository_owner }} ${{ github.event.repository.name }} ${{ needs.check-pre-requisites.outputs.tag-version }}
 
       - name: Verify Deployment
         run: |
